tests/neg/i8827a.check
-- [E172] Type Error: tests/neg/i8827a.scala:16:26 ---------------------------------------------------------------------
16 |  summon[Order[List[Foo]]] // error
   |                          ^
   | No given instance of type pkg.Order[pkg.Foo] was found for parameter orderA of method orderList in object Order
   |
   | The following import might fix the problem:
   |
   |   import pkg.Implicits.orderFoo
   |
